# biz-error

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  biz_errors.yaml.example
biz-error-macros/: Cargo.toml
biz-error-macros/src/: lib.rs
examples/: basic.rs
src/: codegen.rs  lib.rs  lib.rs.bak
