[package]
name = "biz-error-macros"
version = "0.1.0"
edition = "2024"
authors = ["Yuxs <yuxs365@gmail.com>"]
description = "Procedural macros for biz-error code generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/biz-error"
keywords = ["error", "error-code", "i18n", "business", "codegen", "procedural-macro"]
categories = ["development-tools", "web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde_yaml = "0.9"
